// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`register emits error when handling errors when saving anonymous user 1`] = `
Array [
  Array [
    "action",
    Object {
      "data": Object {
        "error": "Noe gikk galt under registreringen. Prøv igjen",
      },
      "type": "ERROR",
    },
  ],
]
`;

exports[`register emits error when handling errors when validating hash 1`] = `
Array [
  Array [
    "action",
    Object {
      "data": Object {
        "error": "Validering av personlig kode feilet",
      },
      "type": "ERROR",
    },
  ],
]
`;

exports[`register emits error when pin code is wrong 1`] = `
Array [
  Array [
    "action",
    Object {
      "data": Object {
        "error": "Feil pinkode",
      },
      "type": "ERROR",
    },
  ],
]
`;

exports[`register emits error when registration is closed 1`] = `
Array [
  Array [
    "action",
    Object {
      "data": Object {
        "error": "Registreringen er ikke åpen.",
      },
      "type": "ERROR",
    },
  ],
]
`;

exports[`register emits error when user is already registered with wrong personal code 1`] = `
Array [
  Array [
    "action",
    Object {
      "data": Object {
        "error": "Feil personlig kode",
      },
      "type": "ERROR",
    },
  ],
]
`;

exports[`register emits registered when user is already registered with correct personal code 1`] = `
Array [
  Array [
    "action",
    Object {
      "data": Object {
        "registered": true,
      },
      "type": "AUTH_REGISTERED",
    },
  ],
]
`;

exports[`register emits registration status 1`] = `
Array [
  Array [
    "action",
    Object {
      "data": Object {
        "registered": true,
      },
      "type": "AUTH_REGISTERED",
    },
  ],
]
`;
